--- a/packages/visual-grid-client/package.json
+++ b/packages/visual-grid-client/package.json
@@ -48,7 +48,7 @@
     "@applitools/jsdom": false
   },
   "devDependencies": {
-    "applitools/dom-snapshot": "4.0.3",
+    "@applitools/dom-snapshot": "4.0.5",
     "@applitools/sdk-release-kit": "0.2.2",
     "@applitools/sdk-shared": "0.1.0",
     "chai": "^4.2.0",
