--- a/packages/sdk-shared/package.json
+++ b/packages/sdk-shared/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@applitools/sdk-coverage-tests": "^1.0.13",
     "@applitools/functional-commons": "1.5.4",
+    "chalk": "3.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
