--- a/packages/eyes-playwright/package.json
+++ b/packages/eyes-playwright/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/eyes-playwright",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Applitools Eyes SDK for Playwright",
   "keywords": [
     "eyes-playwright",
@@ -45,8 +45,8 @@
     "@applitools/sdk-shared": "0.1.0",
     "eslint": "^7.2.0",
     "mocha": "^8.0.1",
-    "spec-xunit-file": "0.0.1-3",
-    "playwright": "^1.0.0"
+    "playwright": "^1.0.0",
+    "spec-xunit-file": "0.0.1-3"
   },
   "scripts": {
     "lint": "eslint '**/*.js'",
