--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,10 @@
 version: '3'
 services:
+  web:
+    image: "nginx"
+    ports:
+      - "80:80"
+    command: "bash -c \"apt-get update && apt-get -y install git && git clone https://github.com/applitools/demo.git && cp -r demo/* /usr/share/nginx/html && nginx -g 'daemon off;'\""
   chrome:
     image: "selenium/standalone-chrome:3.141.59-20200515"
     volumes:
@@ -12,3 +17,4 @@ services:
       - "/dev/shm:/dev/shm"
     ports:
       - "4445:4444"
+  
