--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.4'
 services:
   chrome:
     image: "selenium/standalone-chrome:3.141.59-20200515"
@@ -6,6 +6,15 @@ services:
       - "/dev/shm:/dev/shm"
     ports:
       - "4444:4444"
+      - target: 5555
+        protocol: tcp
+        mode: host
+      - target: 5556
+        protocol: tcp
+        mode: host
+      - target: 5557
+        protocol: tcp
+        mode: host
   firefox:
     image: "selenium/standalone-firefox"
     volumes:
