--- a/packages/snippets/package.json
+++ b/packages/snippets/package.json
@@ -22,17 +22,16 @@
   "devDependencies": {
     "@applitools/sdk-release-kit": "0.2.2",
     "@applitools/sdk-shared": "^0.1.0",
-    "@babel/preset-env": "^7.10.2",
-    "@rollup/plugin-babel": "^5.0.3",
-    "@rollup/plugin-commonjs": "^13.0.0",
+    "@babel/preset-env": "^7.11.5",
+    "@rollup/plugin-babel": "^5.2.1",
+    "@rollup/plugin-commonjs": "^15.0.0",
     "chalk": "^4.1.0",
     "glob": "^7.1.6",
-    "mocha": "^8.0.1",
-    "playwright": "^1.1.1",
-    "rollup": "^2.16.1",
-    "rollup-plugin-progress": "^1.1.2",
-    "rollup-plugin-terser": "^6.1.0",
+    "mocha": "^8.1.3",
+    "playwright": "1.1.1",
+    "rollup": "^2.26.11",
+    "rollup-plugin-terser": "^7.0.2",
     "webdriverio": "^6.1.24",
-    "yargs": "^15.3.1"
+    "yargs": "^16.0.3"
   }
 }
