--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -64,6 +64,7 @@
   "scripts": {
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "render": "node ../sdk-shared/src/render.js",
+    "capture-dom": "node ../sdk-shared/src/capture-dom.js",
     "test": "yarn test:it",
     "test:it": "mocha -r ./test/util/version-alias.js --no-timeouts --parallel --jobs 15 './test/it/**/*.spec.js'",
     "coverage:generate": "coverage-tests create-tests",
