--- a/packages/sdk-shared/package.json
+++ b/packages/sdk-shared/package.json
@@ -34,6 +34,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "filenamify": "^4.1.0",
     "morgan": "^1.10.0",
     "ncp": "2.0.0",
     "yargs": "^15.3.1"
