--- a/packages/eyes-nightwatch/package.json
+++ b/packages/eyes-nightwatch/package.json
@@ -77,12 +77,12 @@
     "test:it:headless:w3c": "yarn nightwatch --env firefox test/it/spec-driver-headless-desktop.spec.js",
     "test:it:headed": "yarn nightwatch --env firefox test/it/spec-driver-onscreen-desktop.spec.js",
     "test:it:mobile": "yarn nightwatch test/it/spec-driver-mobile.spec.js",
-    "coverage:generate": "coverage-tests generate test/coverage/index.js",
+    "coverage:generate": "coverage-tests generate ../sdk-shared/coverage-tests/generic/index.js --name 'eyes-nightwatch'",
     "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report --send-report prod",
     "docker:setup": "node ../sdk-shared/src/generate-docker-compose-config.js && docker-compose up -d",
     "docker:teardown": "docker-compose down",
-    "test:coverage": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-nightwatch' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml yarn nightwatch test/generic/*.spec.js",
+    "test:coverage": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-nightwatch' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
     "types:generate": "rm -rf ./typings && tsc --declaration --declarationDir ./typings --allowJs --emitDeclarationOnly ./index.js",
     "preversion": "bongo preversion && yarn test && yarn coverage:prod",
     "version": "bongo version",
