--- a/packages/eyes-nightwatch/package.json
+++ b/packages/eyes-nightwatch/package.json
@@ -71,12 +71,13 @@
     "nw": "yarn nightwatch",
     "lint": "eslint . --ext .js",
     "render": "node ../sdk-shared/scripts/render.js",
-    "test": "yarn test:it",
+    "test": "yarn test:it && yarn test:e2e",
     "test:it": "yarn test:it:headless:jwp && yarn test:it:headless:w3c && yarn test:it:headed && yarn test:it:mobile",
     "test:it:headless:jwp": "yarn nightwatch test/it/spec-driver-headless-desktop.spec.js",
     "test:it:headless:w3c": "yarn nightwatch --env firefox test/it/spec-driver-headless-desktop.spec.js",
     "test:it:headed": "yarn nightwatch --env firefox test/it/spec-driver-onscreen-desktop.spec.js",
     "test:it:mobile": "yarn nightwatch test/it/spec-driver-mobile.spec.js",
+    "test:e2e": "yarn nightwatch test/e2e/*.spec.js",
     "coverage:generate": "coverage-tests generate ../sdk-shared/coverage-tests/generic/index.js --name 'eyes-nightwatch'",
     "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report --send-report prod",
