--- a/packages/sdk-release-kit/package.json
+++ b/packages/sdk-release-kit/package.json
@@ -4,6 +4,9 @@
   "engines": {
     "node": ">=10.0.0"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "directories": {
     "lib": "./src",
     "test": "./test"
