--- a/packages/eyes-universal/package.json
+++ b/packages/eyes-universal/package.json
@@ -9,7 +9,7 @@
     "visual regression",
     "automation",
     "testing",
-    "tests",
+    "tests"
   ],
   "homepage": "https://applitools.com",
   "author": {
@@ -31,7 +31,9 @@
   "main": "./index.js",
   "dependencies": {
     "@applitools/eyes-sdk-core": "12.4.2",
-    "@applitools/visual-grid-client": "15.0.10"
+    "@applitools/visual-grid-client": "15.0.10",
+    "uuid": "^8.3.1",
+    "ws": "^7.3.1"
   },
   "peerDependencies": {
     "playwright": ">=1.0.0"
