--- a/packages/eyes-puppeteer/package.json
+++ b/packages/eyes-puppeteer/package.json
@@ -36,28 +36,28 @@
     "@applitools/visual-grid-client": "15.1.0"
   },
   "peerDependencies": {
-    "puppeteer": ">=5.4.1"
+    "puppeteer": ">=5.3.0"
   },
   "devDependencies": {
     "@applitools/sdk-coverage-tests": "^2.0.1",
     "@applitools/sdk-fake-eyes-server": "^2.0.0",
     "@applitools/sdk-release-kit": "^0.4.2",
-    "@applitools/sdk-shared": "^0.4.0",
+    "@applitools/sdk-shared": "^0.4.1",
     "eslint": "^7.9.0",
     "eslint-plugin-mocha-no-only": "^1.1.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "mocha": "^8.0.1",
     "prettier": "1.19.0",
-    "puppeteer": "5.4.1",
+    "puppeteer": "5.3.1",
     "spec-xunit-file": "0.0.1-3"
   },
   "scripts": {
     "lint": "eslint '**/*.js'",
     "render": "node ../sdk-shared/scripts/render.js",
     "test": "yarn test:it",
-    "test:it": "mocha --no-timeouts ./test/it/*.spec.js",
-    "test:coverage": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-puppeteer' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
+    "test:it": "yarn docker:run npx mocha --no-timeouts ./test/it/*.spec.js",
+    "test:coverage": "yarn docker:run npx mocha --config .mocharc.cvg.js",
     "coverage:generate": "coverage-tests generate ../sdk-shared/coverage-tests/generic/index.js --name 'eyes-puppeteer'",
     "coverage:report": "coverage-tests report ../sdk-shared/coverage-tests/generic/index.js --name 'eyes-puppeteer'",
     "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && yarn coverage:report --sandbox",
@@ -65,7 +65,9 @@
     "preversion": "bongo preversion && yarn coverage:prod",
     "version": "bongo version",
     "postversion": "bongo postversion",
-    "deps": "bongo deps"
+    "deps": "bongo deps",
+    "docker:init": "docker build -t applitools/puppeteer-chromium .",
+    "docker:run": "docker run --env APPLITOOLS_API_KEY=$APPLITOOLS_API_KEY_SDK --env APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-puppeteer' --env APPLITOOLS_BATCH_ID=$(uuidgen) --env XUNIT_FILE=coverage-test-report.xml -it --init --rm -v $(pwd):/sandbox applitools/puppeteer-chromium"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
