--- a/packages/eyes-puppeteer/package.json
+++ b/packages/eyes-puppeteer/package.json
@@ -66,8 +66,8 @@
     "version": "bongo version",
     "postversion": "bongo postversion",
     "deps": "bongo deps",
-    "docker:init": "docker build -t applitools/puppeteer-chromium .",
-    "docker:run": "docker run --env APPLITOOLS_API_KEY=$APPLITOOLS_API_KEY_SDK --env APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-puppeteer' --env APPLITOOLS_BATCH_ID=$(uuidgen) --env XUNIT_FILE=coverage-test-report.xml -it --init --rm -v $(pwd):/sandbox applitools/puppeteer-chromium"
+    "docker:build": "docker build -t applitools/puppeteer-chrome .",
+    "docker:run": "docker run --env APPLITOOLS_API_KEY=$APPLITOOLS_API_KEY_SDK --env APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-puppeteer' --env APPLITOOLS_BATCH_ID=$(uuidgen) --env XUNIT_FILE=coverage-test-report.xml -it --init --rm -v $(pwd):/sandbox applitools/puppeteer-chrome"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
