--- a/packages/eyes-api/package.json
+++ b/packages/eyes-api/package.json
@@ -30,6 +30,8 @@
   "main": "./index.js",
   "dependencies": {},
   "devDependencies": {
+    "@types/dateformat": "^3.0.1",
+    "@types/node": "^14.14.7",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   },
