--- a/packages/eyes-api/tsconfig.json
+++ b/packages/eyes-api/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "lib": [
+      "es2017"
+    ],
     "target": "ES5",
     "module": "commonjs",
     "noImplicitAny": true,
